added hero things